connected to database
connected all controller functions to their respective database queries

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app",
   "scripts": {
-    "test": "nodemon app"
+    "test": "nodemon app",
+    "start":"node app"
   },
   "author": "piyush verma",
   "license": "ISC",
