--- a/package.json
+++ b/package.json
@@ -5,13 +5,19 @@
   "main": "app",
   "scripts": {
     "test": "nodemon app",
-    "start":"node app"
+    "start": "node app",
+    "add-admin": "node scripts/createAdmin.js"
   },
   "author": "piyush verma",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongodb": "^3.6.6",
     "mongoose": "^5.12.5",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "prompt-sync": "^4.2.0"
   }
 }
