--- a/package.json
+++ b/package.json
@@ -6,18 +6,21 @@
   "scripts": {
     "test": "nodemon app",
     "start": "node app",
-    "add-admin": "node scripts/createAdmin.js"
+    "add-admin": "node scripts/createAdmin.js",
+    "start-database": "mongod"
   },
-  "author": "piyush verma",
+  "author": "Piyush Verma",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "cloudinary": "^1.25.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.6",
     "mongoose": "^5.12.5",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "prompt-sync": "^4.2.0"
   }
 }
